# py.bookshelf

./: .cursorrules  .env.template  .gitignore  README.md  main.py  pyproject.toml
.cursor/rules/: fastapi.mdc
app/: __init__.py  main.py
app/core/: config.py  database_engine.py  dependencies.py  exceptions.py  jobs.py  logging.py
app/models/: job.py
app/schemas/: book.py  job.py
app/services/: __init__.py  background_processor.py  bookshelf_service.py  database_service.py  document_processing_service.py  pinecone_service.py
app/utils/: book_processor.py
