[project]
name = "bookshelf"
version = "0.1.0"
description = "Bookshelf API with Pinecone integration"
readme = "README.md"
requires-python = ">=3.12.11"
dependencies = [
    "fastapi>=0.116.1",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

